--- a/index.html
+++ b/index.html
@@ -1,7 +1,26 @@
 <!DOCTYPE html>
-<html>
-<body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-</body>
+    <html>
+    <head>
+        <link rel="stylesheet" href="styles.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Mona+Sans:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
+    </head>
+    <body>
+        <div class="inputField">
+            <input type="number" id="yearInput" min="1900" max="2100" step="1" value="2025">
+            <div class="arrowButtons">
+                <button class="arrowUp">▲</button>
+                <button class="arrowDown">▼</button>
+            </div>
+        </div>
+        <div id="gridContainer"></div>
+        <div id="colorPalette"></div>
+        <div id="buttonContainer">
+            <button id="clearButton">Clear</button>
+            <button id="randomButton">Randomize</button>
+            <button id="pushButton">Push</button>
+        </div>
+        <script src="script.js"></script>
+    </body>
 </html>
